added some more MVCs

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 
 <p>This site is my playground for learning Ruby on Rails</p>
 
-<a href="articles/new">Make a blog post</a>
+<%= link_to 'My Blog', controller: 'articles' %>
